force-app/main/default/objects/Loan_File_Contact__c/Loan_File_Contact__c.object-meta.xml
<CustomObject>
    <label>Loan File Contact</label>
    <nameField>
        <displayFormat>File Contact- {00000}</displayFormat>
        <label>Loan File Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan File Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>