force-app/main/default/objects/Loan_File_Contact__c/fields/BuyersAgentIndicator__c.field-meta.xml
<CustomField>
    <fullName>BuyersAgentIndicator__c</fullName>
    <label>BuyersAgentIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>