force-app/main/default/objects/Loan_File_Contact__c/fields/Encompass_Contacts_ID__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Contacts_ID__c</fullName>
    <externalId>true</externalId>
    <label>Encompass Contacts ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>