force-app/main/default/objects/Loan_File_Contact__c/fields/EscrowIndicator__c.field-meta.xml
<CustomField>
    <fullName>EscrowIndicator__c</fullName>
    <label>EscrowIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>