force-app/main/default/objects/Loan_File_Contact__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan File Contacts</relationshipLabel>
    <relationshipName>Loan_File_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>