force-app/main/default/objects/Loan_File_Contact__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <label>Main Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>