force-app/main/default/objects/Loan_File_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>IF(SellersAgentIndicator__c != NULL, &apos;Sellers Agent&apos;, 
   IF(BuyersAgentIndicator__c != NULL, &apos;Buyers Agent&apos;,
      If(EscrowIndicator__c != NULL, &apos;Escrow Company&apos;, &apos;N/A&apos;)))</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>