force-app/main/default/objects/Loan_File_Contact__c/fields/SellersAgentIndicator__c.field-meta.xml
<CustomField>
    <fullName>SellersAgentIndicator__c</fullName>
    <label>SellersAgentIndicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>